# DataScope

./: .gitignore  CMakeLists.txt  Makefile  test_limit_filter.c  usage.md
doc/: resis.txt
src/: glad.c  main.c  main.cpp  parser.cpp  parser.h  serial_reader.cpp  serial_reader.h
